--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -1,5 +1,5 @@
 
-.hero-title{
+.hero__title{
   text-align: center;
   margin:0 auto;
   width: 696px;
@@ -11,5 +11,6 @@
   color: var(--white-color);
   margin-bottom: 44px;
   box-sizing: border-box;
+
 }
 
