--- a/sass/main.scss
+++ b/sass/main.scss
@@ -5,7 +5,7 @@
 @import"./layout/header";
 @import"./utils/button";
 @import"./utils/variables";
-@import"./footer";
+@import"./layout/footer";
 @import"./base/reset.scss";
 @import"./layout/hero";
 @import"./layout/modal";
