--- a/css/main.css
+++ b/css/main.css
@@ -424,6 +424,24 @@
   padding: 10px 32px;
 }
 
+.btn-modal {
+  margin: auto;
+  display: flex;
+  font-family: inherit;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.8;
+  align-items: center;
+  letter-spacing: 0.06em;
+  color: #FFFFFF;
+  border-color: transparent;
+  background-color: var(--accent-color);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+  padding: 10px 55px;
+  margin-top: 30px;
+}
+
 :root {
   --primary-text-color: #212121;
   --secondary-text-color:#757575;
@@ -654,6 +672,20 @@ ul {
   margin: 0 auto;
 }
 
+.hero__title {
+  text-align: center;
+  margin: 0 auto;
+  width: 696px;
+  font-weight: 900;
+  font-size: 44px;
+  line-height: 1.36;
+  letter-spacing: 0.06em;
+  text-transform: uppercase;
+  color: var(--white-color);
+  margin-bottom: 44px;
+  box-sizing: border-box;
+}
+
 .hero{
   height: 600px;
   text-align: center;
@@ -672,21 +704,6 @@ ul {
   background-position: center;
   background-size: cover;
   }
-
-
-.hero-title {
-  text-align: center;
-  margin: 0 auto;
-  width: 696px;
-  font-weight: 900;
-  font-size: 44px;
-  line-height: 1.36;
-  letter-spacing: 0.06em;
-  text-transform: uppercase;
-  color: var(--white-color);
-  margin-bottom: 44px;
-  box-sizing: border-box;
-}
 
 .backdrop {
   position: fixed;
